Lab3/src/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> stmt_list
Rule 2     stmt_list -> <empty>
Rule 3     stmt_list -> stmt_list stmt
Rule 4     stmt -> var_decl NEWLINE
Rule 5     stmt -> const_decl NEWLINE
Rule 6     stmt -> map_decl NEWLINE
Rule 7     stmt -> proc_decl NEWLINE
Rule 8     stmt -> assignment NEWLINE
Rule 9     stmt -> incdec NEWLINE
Rule 10    stmt -> if_stmt NEWLINE
Rule 11    stmt -> while_stmt NEWLINE
Rule 12    stmt -> proc_call NEWLINE
Rule 13    stmt -> robot_op NEWLINE
Rule 14    stmt -> map_op NEWLINE
Rule 15    stmt -> print_stmt NEWLINE
Rule 16    stmt -> NEWLINE
Rule 17    var_decl -> KW_INT IDENTIFIER OP_ASSIGN expr
Rule 18    var_decl -> KW_BOOLEAN IDENTIFIER OP_ASSIGN expr
Rule 19    const_decl -> KW_CINT IDENTIFIER OP_ASSIGN expr
Rule 20    const_decl -> KW_CBOOLEAN IDENTIFIER OP_ASSIGN expr
Rule 21    map_decl -> KW_MAP IDENTIFIER
Rule 22    proc_decl -> KW_PROC IDENTIFIER param_list_opt block
Rule 23    param_list_opt -> param_list
Rule 24    param_list_opt -> empty
Rule 25    param_list -> IDENTIFIER
Rule 26    param_list -> param_list IDENTIFIER
Rule 27    block -> LPAREN opt_nl stmt_list opt_nl RPAREN
Rule 28    opt_nl -> opt_nl NEWLINE
Rule 29    opt_nl -> empty
Rule 30    assignment -> IDENTIFIER OP_ASSIGN expr
Rule 31    incdec -> OP_INC expr expr
Rule 32    incdec -> OP_DEC expr expr
Rule 33    if_stmt -> KW_IF expr block else_opt
Rule 34    else_opt -> KW_ELSE block
Rule 35    else_opt -> empty
Rule 36    while_stmt -> KW_WHILE expr KW_DO block
Rule 37    proc_call -> IDENTIFIER param_list_opt
Rule 38    robot_op -> OP_STEP IDENTIFIER
Rule 39    robot_op -> OP_BACK
Rule 40    robot_op -> OP_RIGHT
Rule 41    robot_op -> OP_LEFT
Rule 42    robot_op -> OP_LOOK
Rule 43    map_op -> MAP_BAR LPAREN IDENTIFIER COMMA IDENTIFIER COMMA arith_expr COMMA arith_expr RPAREN
Rule 44    map_op -> MAP_EMP LPAREN IDENTIFIER COMMA IDENTIFIER COMMA arith_expr COMMA arith_expr RPAREN
Rule 45    map_op -> MAP_SET LPAREN IDENTIFIER COMMA IDENTIFIER COMMA arith_expr COMMA arith_expr RPAREN
Rule 46    map_op -> MAP_CLR LPAREN IDENTIFIER COMMA IDENTIFIER COMMA arith_expr COMMA arith_expr RPAREN
Rule 47    print_stmt -> KW_PRINT expr
Rule 48    expr -> arith_expr
Rule 49    expr -> logic_expr
Rule 50    expr -> robot_op
Rule 51    expr -> proc_call
Rule 52    arith_expr -> arith_expr + arith_expr
Rule 53    arith_expr -> arith_expr - arith_expr
Rule 54    arith_expr -> arith_expr OP_INC arith_expr
Rule 55    arith_expr -> arith_expr OP_DEC arith_expr
Rule 56    arith_expr -> term
Rule 57    term -> INT_LITERAL
Rule 58    term -> IDENTIFIER
Rule 59    term -> proc_call
Rule 60    term -> OP_LOOK
Rule 61    logic_expr -> TRUE
Rule 62    logic_expr -> FALSE
Rule 63    logic_expr -> OP_NOT LPAREN logic_expr RPAREN
Rule 64    logic_expr -> OP_GT LPAREN expr COMMA expr RPAREN
Rule 65    logic_expr -> OP_LT LPAREN expr COMMA expr RPAREN
Rule 66    logic_expr -> OP_EQ LPAREN expr COMMA expr RPAREN
Rule 67    logic_expr -> logic_expr OP_OR logic_expr
Rule 68    empty -> <empty>

Terminals, with rules where they appear

+                    : 52
-                    : 53
COMMA                : 43 43 43 44 44 44 45 45 45 46 46 46 64 65 66
FALSE                : 62
IDENTIFIER           : 17 18 19 20 21 22 25 26 30 37 38 43 43 44 44 45 45 46 46 58
INT_LITERAL          : 57
KW_BOOLEAN           : 18
KW_CBOOLEAN          : 20
KW_CINT              : 19
KW_DO                : 36
KW_ELSE              : 34
KW_IF                : 33
KW_INT               : 17
KW_MAP               : 21
KW_PRINT             : 47
KW_PROC              : 22
KW_WHILE             : 36
LPAREN               : 27 43 44 45 46 63 64 65 66
MAP_BAR              : 43
MAP_CLR              : 46
MAP_EMP              : 44
MAP_SET              : 45
NEWLINE              : 4 5 6 7 8 9 10 11 12 13 14 15 16 28
OP_ASSIGN            : 17 18 19 20 30
OP_BACK              : 39
OP_DEC               : 32 55
OP_EQ                : 66
OP_GT                : 64
OP_INC               : 31 54
OP_LEFT              : 41
OP_LOOK              : 42 60
OP_LT                : 65
OP_NOT               : 63
OP_OR                : 67
OP_RIGHT             : 40
OP_STEP              : 38
RPAREN               : 27 43 44 45 46 63 64 65 66
TRUE                 : 61
error                : 

Nonterminals, with rules where they appear

arith_expr           : 43 43 44 44 45 45 46 46 48 52 52 53 53 54 54 55 55
assignment           : 8
block                : 22 33 34 36
const_decl           : 5
else_opt             : 33
empty                : 24 29 35
expr                 : 17 18 19 20 30 31 31 32 32 33 36 47 64 64 65 65 66 66
if_stmt              : 10
incdec               : 9
logic_expr           : 49 63 67 67
map_decl             : 6
map_op               : 14
opt_nl               : 27 27 28
param_list           : 23 26
param_list_opt       : 22 37
print_stmt           : 15
proc_call            : 12 51 59
proc_decl            : 7
program              : 0
robot_op             : 13 50
stmt                 : 3
stmt_list            : 1 3 27
term                 : 56
var_decl             : 4
while_stmt           : 11

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . stmt_list
    (2) stmt_list -> .
    (3) stmt_list -> . stmt_list stmt

    NEWLINE         reduce using rule 2 (stmt_list -> .)
    KW_INT          reduce using rule 2 (stmt_list -> .)
    KW_BOOLEAN      reduce using rule 2 (stmt_list -> .)
    KW_CINT         reduce using rule 2 (stmt_list -> .)
    KW_CBOOLEAN     reduce using rule 2 (stmt_list -> .)
    KW_MAP          reduce using rule 2 (stmt_list -> .)
    KW_PROC         reduce using rule 2 (stmt_list -> .)
    IDENTIFIER      reduce using rule 2 (stmt_list -> .)
    OP_INC          reduce using rule 2 (stmt_list -> .)
    OP_DEC          reduce using rule 2 (stmt_list -> .)
    KW_IF           reduce using rule 2 (stmt_list -> .)
    KW_WHILE        reduce using rule 2 (stmt_list -> .)
    OP_STEP         reduce using rule 2 (stmt_list -> .)
    OP_BACK         reduce using rule 2 (stmt_list -> .)
    OP_RIGHT        reduce using rule 2 (stmt_list -> .)
    OP_LEFT         reduce using rule 2 (stmt_list -> .)
    OP_LOOK         reduce using rule 2 (stmt_list -> .)
    MAP_BAR         reduce using rule 2 (stmt_list -> .)
    MAP_EMP         reduce using rule 2 (stmt_list -> .)
    MAP_SET         reduce using rule 2 (stmt_list -> .)
    MAP_CLR         reduce using rule 2 (stmt_list -> .)
    KW_PRINT        reduce using rule 2 (stmt_list -> .)
    $end            reduce using rule 2 (stmt_list -> .)

    program                        shift and go to state 1
    stmt_list                      shift and go to state 2

state 1

    (0) S' -> program .



state 2

    (1) program -> stmt_list .
    (3) stmt_list -> stmt_list . stmt
    (4) stmt -> . var_decl NEWLINE
    (5) stmt -> . const_decl NEWLINE
    (6) stmt -> . map_decl NEWLINE
    (7) stmt -> . proc_decl NEWLINE
    (8) stmt -> . assignment NEWLINE
    (9) stmt -> . incdec NEWLINE
    (10) stmt -> . if_stmt NEWLINE
    (11) stmt -> . while_stmt NEWLINE
    (12) stmt -> . proc_call NEWLINE
    (13) stmt -> . robot_op NEWLINE
    (14) stmt -> . map_op NEWLINE
    (15) stmt -> . print_stmt NEWLINE
    (16) stmt -> . NEWLINE
    (17) var_decl -> . KW_INT IDENTIFIER OP_ASSIGN expr
    (18) var_decl -> . KW_BOOLEAN IDENTIFIER OP_ASSIGN expr
    (19) const_decl -> . KW_CINT IDENTIFIER OP_ASSIGN expr
    (20) const_decl -> . KW_CBOOLEAN IDENTIFIER OP_ASSIGN expr
    (21) map_decl -> . KW_MAP IDENTIFIER
    (22) proc_decl -> . KW_PROC IDENTIFIER param_list_opt block
    (30) assignment -> . IDENTIFIER OP_ASSIGN expr
    (31) incdec -> . OP_INC expr expr
    (32) incdec -> . OP_DEC expr expr
    (33) if_stmt -> . KW_IF expr block else_opt
    (36) while_stmt -> . KW_WHILE expr KW_DO block
    (37) proc_call -> . IDENTIFIER param_list_opt
    (38) robot_op -> . OP_STEP IDENTIFIER
    (39) robot_op -> . OP_BACK
    (40) robot_op -> . OP_RIGHT
    (41) robot_op -> . OP_LEFT
    (42) robot_op -> . OP_LOOK
    (43) map_op -> . MAP_BAR LPAREN IDENTIFIER COMMA IDENTIFIER COMMA arith_expr COMMA arith_expr RPAREN
    (44) map_op -> . MAP_EMP LPAREN IDENTIFIER COMMA IDENTIFIER COMMA arith_expr COMMA arith_expr RPAREN
    (45) map_op -> . MAP_SET LPAREN IDENTIFIER COMMA IDENTIFIER COMMA arith_expr COMMA arith_expr RPAREN
    (46) map_op -> . MAP_CLR LPAREN IDENTIFIER COMMA IDENTIFIER COMMA arith_expr COMMA arith_expr RPAREN
    (47) print_stmt -> . KW_PRINT expr

    $end            reduce using rule 1 (program -> stmt_list .)
    NEWLINE         shift and go to state 5
    KW_INT          shift and go to state 17
    KW_BOOLEAN      shift and go to state 19
    KW_CINT         shift and go to state 20
    KW_CBOOLEAN     shift and go to state 21
    KW_MAP          shift and go to state 22
    KW_PROC         shift and go to state 23
    IDENTIFIER      shift and go to state 18
    OP_INC          shift and go to state 24
    OP_DEC          shift and go to state 25
    KW_IF           shift and go to state 26
    KW_WHILE        shift and go to state 27
    OP_STEP         shift and go to state 28
    OP_BACK         shift and go to state 29
    OP_RIGHT        shift and go to state 30
    OP_LEFT         shift and go to state 31
    OP_LOOK         shift and go to state 32
    MAP_BAR         shift and go to state 33
    MAP_EMP         shift and go to state 34
    MAP_SET         shift and go to state 35
    MAP_CLR         shift and go to state 36
    KW_PRINT        shift and go to state 37

    stmt                           shift and go to state 3
    var_decl                       shift and go to state 4
    const_decl                     shift and go to state 6
    map_decl                       shift and go to state 7
    proc_decl                      shift and go to state 8
    assignment                     shift and go to state 9
    incdec                         shift and go to state 10
    if_stmt                        shift and go to state 11
    while_stmt                     shift and go to state 12
    proc_call                      shift and go to state 13
    robot_op                       shift and go to state 14
    map_op                         shift and go to state 15
    print_stmt                     shift and go to state 16

state 3

    (3) stmt_list -> stmt_list stmt .

    NEWLINE         reduce using rule 3 (stmt_list -> stmt_list stmt .)
    KW_INT          reduce using rule 3 (stmt_list -> stmt_list stmt .)
    KW_BOOLEAN      reduce using rule 3 (stmt_list -> stmt_list stmt .)
    KW_CINT         reduce using rule 3 (stmt_list -> stmt_list stmt .)
    KW_CBOOLEAN     reduce using rule 3 (stmt_list -> stmt_list stmt .)
    KW_MAP          reduce using rule 3 (stmt_list -> stmt_list stmt .)
    KW_PROC         reduce using rule 3 (stmt_list -> stmt_list stmt .)
    IDENTIFIER      reduce using rule 3 (stmt_list -> stmt_list stmt .)
    OP_INC          reduce using rule 3 (stmt_list -> stmt_list stmt .)
    OP_DEC          reduce using rule 3 (stmt_list -> stmt_list stmt .)
    KW_IF           reduce using rule 3 (stmt_list -> stmt_list stmt .)
    KW_WHILE        reduce using rule 3 (stmt_list -> stmt_list stmt .)
    OP_STEP         reduce using rule 3 (stmt_list -> stmt_list stmt .)
    OP_BACK         reduce using rule 3 (stmt_list -> stmt_list stmt .)
    OP_RIGHT        reduce using rule 3 (stmt_list -> stmt_list stmt .)
    OP_LEFT         reduce using rule 3 (stmt_list -> stmt_list stmt .)
    OP_LOOK         reduce using rule 3 (stmt_list -> stmt_list stmt .)
    MAP_BAR         reduce using rule 3 (stmt_list -> stmt_list stmt .)
    MAP_EMP         reduce using rule 3 (stmt_list -> stmt_list stmt .)
    MAP_SET         reduce using rule 3 (stmt_list -> stmt_list stmt .)
    MAP_CLR         reduce using rule 3 (stmt_list -> stmt_list stmt .)
    KW_PRINT        reduce using rule 3 (stmt_list -> stmt_list stmt .)
    $end            reduce using rule 3 (stmt_list -> stmt_list stmt .)
    RPAREN          reduce using rule 3 (stmt_list -> stmt_list stmt .)


state 4

    (4) stmt -> var_decl . NEWLINE

    NEWLINE         shift and go to state 38


state 5

    (16) stmt -> NEWLINE .

    NEWLINE         reduce using rule 16 (stmt -> NEWLINE .)
    KW_INT          reduce using rule 16 (stmt -> NEWLINE .)
    KW_BOOLEAN      reduce using rule 16 (stmt -> NEWLINE .)
    KW_CINT         reduce using rule 16 (stmt -> NEWLINE .)
    KW_CBOOLEAN     reduce using rule 16 (stmt -> NEWLINE .)
    KW_MAP          reduce using rule 16 (stmt -> NEWLINE .)
    KW_PROC         reduce using rule 16 (stmt -> NEWLINE .)
    IDENTIFIER      reduce using rule 16 (stmt -> NEWLINE .)
    OP_INC          reduce using rule 16 (stmt -> NEWLINE .)
    OP_DEC          reduce using rule 16 (stmt -> NEWLINE .)
    KW_IF           reduce using rule 16 (stmt -> NEWLINE .)
    KW_WHILE        reduce using rule 16 (stmt -> NEWLINE .)
    OP_STEP         reduce using rule 16 (stmt -> NEWLINE .)
    OP_BACK         reduce using rule 16 (stmt -> NEWLINE .)
    OP_RIGHT        reduce using rule 16 (stmt -> NEWLINE .)
    OP_LEFT         reduce using rule 16 (stmt -> NEWLINE .)
    OP_LOOK         reduce using rule 16 (stmt -> NEWLINE .)
    MAP_BAR         reduce using rule 16 (stmt -> NEWLINE .)
    MAP_EMP         reduce using rule 16 (stmt -> NEWLINE .)
    MAP_SET         reduce using rule 16 (stmt -> NEWLINE .)
    MAP_CLR         reduce using rule 16 (stmt -> NEWLINE .)
    KW_PRINT        reduce using rule 16 (stmt -> NEWLINE .)
    $end            reduce using rule 16 (stmt -> NEWLINE .)
    RPAREN          reduce using rule 16 (stmt -> NEWLINE .)


state 6

    (5) stmt -> const_decl . NEWLINE

    NEWLINE         shift and go to state 39


state 7

    (6) stmt -> map_decl . NEWLINE

    NEWLINE         shift and go to state 40


state 8

    (7) stmt -> proc_decl . NEWLINE

    NEWLINE         shift and go to state 41


state 9

    (8) stmt -> assignment . NEWLINE

    NEWLINE         shift and go to state 42


state 10

    (9) stmt -> incdec . NEWLINE

    NEWLINE         shift and go to state 43


state 11

    (10) stmt -> if_stmt . NEWLINE

    NEWLINE         shift and go to state 44


state 12

    (11) stmt -> while_stmt . NEWLINE

    NEWLINE         shift and go to state 45


state 13

    (12) stmt -> proc_call . NEWLINE

    NEWLINE         shift and go to state 46


state 14

    (13) stmt -> robot_op . NEWLINE

    NEWLINE         shift and go to state 47


state 15

    (14) stmt -> map_op . NEWLINE

    NEWLINE         shift and go to state 48


state 16

    (15) stmt -> print_stmt . NEWLINE

    NEWLINE         shift and go to state 49


state 17

    (17) var_decl -> KW_INT . IDENTIFIER OP_ASSIGN expr

    IDENTIFIER      shift and go to state 50


state 18

    (30) assignment -> IDENTIFIER . OP_ASSIGN expr
    (37) proc_call -> IDENTIFIER . param_list_opt
    (23) param_list_opt -> . param_list
    (24) param_list_opt -> . empty
    (25) param_list -> . IDENTIFIER
    (26) param_list -> . param_list IDENTIFIER
    (68) empty -> .

    OP_ASSIGN       shift and go to state 52
    IDENTIFIER      shift and go to state 51
    NEWLINE         reduce using rule 68 (empty -> .)

    param_list_opt                 shift and go to state 53
    param_list                     shift and go to state 54
    empty                          shift and go to state 55

state 19

    (18) var_decl -> KW_BOOLEAN . IDENTIFIER OP_ASSIGN expr

    IDENTIFIER      shift and go to state 56


state 20

    (19) const_decl -> KW_CINT . IDENTIFIER OP_ASSIGN expr

    IDENTIFIER      shift and go to state 57


state 21

    (20) const_decl -> KW_CBOOLEAN . IDENTIFIER OP_ASSIGN expr

    IDENTIFIER      shift and go to state 58


state 22

    (21) map_decl -> KW_MAP . IDENTIFIER

    IDENTIFIER      shift and go to state 59


state 23

    (22) proc_decl -> KW_PROC . IDENTIFIER param_list_opt block

    IDENTIFIER      shift and go to state 60


state 24

    (31) incdec -> OP_INC . expr expr
    (48) expr -> . arith_expr
    (49) expr -> . logic_expr
    (50) expr -> . robot_op
    (51) expr -> . proc_call
    (52) arith_expr -> . arith_expr + arith_expr
    (53) arith_expr -> . arith_expr - arith_expr
    (54) arith_expr -> . arith_expr OP_INC arith_expr
    (55) arith_expr -> . arith_expr OP_DEC arith_expr
    (56) arith_expr -> . term
    (61) logic_expr -> . TRUE
    (62) logic_expr -> . FALSE
    (63) logic_expr -> . OP_NOT LPAREN logic_expr RPAREN
    (64) logic_expr -> . OP_GT LPAREN expr COMMA expr RPAREN
    (65) logic_expr -> . OP_LT LPAREN expr COMMA expr RPAREN
    (66) logic_expr -> . OP_EQ LPAREN expr COMMA expr RPAREN
    (67) logic_expr -> . logic_expr OP_OR logic_expr
    (38) robot_op -> . OP_STEP IDENTIFIER
    (39) robot_op -> . OP_BACK
    (40) robot_op -> . OP_RIGHT
    (41) robot_op -> . OP_LEFT
    (42) robot_op -> . OP_LOOK
    (37) proc_call -> . IDENTIFIER param_list_opt
    (57) term -> . INT_LITERAL
    (58) term -> . IDENTIFIER
    (59) term -> . proc_call
    (60) term -> . OP_LOOK

    TRUE            shift and go to state 67
    FALSE           shift and go to state 68
    OP_NOT          shift and go to state 69
    OP_GT           shift and go to state 70
    OP_LT           shift and go to state 71
    OP_EQ           shift and go to state 72
    OP_STEP         shift and go to state 28
    OP_BACK         shift and go to state 29
    OP_RIGHT        shift and go to state 30
    OP_LEFT         shift and go to state 31
    OP_LOOK         shift and go to state 74
    IDENTIFIER      shift and go to state 73
    INT_LITERAL     shift and go to state 75

    expr                           shift and go to state 61
    arith_expr                     shift and go to state 62
    logic_expr                     shift and go to state 63
    robot_op                       shift and go to state 64
    proc_call                      shift and go to state 65
    term                           shift and go to state 66

state 25

    (32) incdec -> OP_DEC . expr expr
    (48) expr -> . arith_expr
    (49) expr -> . logic_expr
    (50) expr -> . robot_op
    (51) expr -> . proc_call
    (52) arith_expr -> . arith_expr + arith_expr
    (53) arith_expr -> . arith_expr - arith_expr
    (54) arith_expr -> . arith_expr OP_INC arith_expr
    (55) arith_expr -> . arith_expr OP_DEC arith_expr
    (56) arith_expr -> . term
    (61) logic_expr -> . TRUE
    (62) logic_expr -> . FALSE
    (63) logic_expr -> . OP_NOT LPAREN logic_expr RPAREN
    (64) logic_expr -> . OP_GT LPAREN expr COMMA expr RPAREN
    (65) logic_expr -> . OP_LT LPAREN expr COMMA expr RPAREN
    (66) logic_expr -> . OP_EQ LPAREN expr COMMA expr RPAREN
    (67) logic_expr -> . logic_expr OP_OR logic_expr
    (38) robot_op -> . OP_STEP IDENTIFIER
    (39) robot_op -> . OP_BACK
    (40) robot_op -> . OP_RIGHT
    (41) robot_op -> . OP_LEFT
    (42) robot_op -> . OP_LOOK
    (37) proc_call -> . IDENTIFIER param_list_opt
    (57) term -> . INT_LITERAL
    (58) term -> . IDENTIFIER
    (59) term -> . proc_call
    (60) term -> . OP_LOOK

    TRUE            shift and go to state 67
    FALSE           shift and go to state 68
    OP_NOT          shift and go to state 69
    OP_GT           shift and go to state 70
    OP_LT           shift and go to state 71
    OP_EQ           shift and go to state 72
    OP_STEP         shift and go to state 28
    OP_BACK         shift and go to state 29
    OP_RIGHT        shift and go to state 30
    OP_LEFT         shift and go to state 31
    OP_LOOK         shift and go to state 74
    IDENTIFIER      shift and go to state 73
    INT_LITERAL     shift and go to state 75

    expr                           shift and go to state 76
    arith_expr                     shift and go to state 62
    logic_expr                     shift and go to state 63
    robot_op                       shift and go to state 64
    proc_call                      shift and go to state 65
    term                           shift and go to state 66

state 26

    (33) if_stmt -> KW_IF . expr block else_opt
    (48) expr -> . arith_expr
    (49) expr -> . logic_expr
    (50) expr -> . robot_op
    (51) expr -> . proc_call
    (52) arith_expr -> . arith_expr + arith_expr
    (53) arith_expr -> . arith_expr - arith_expr
    (54) arith_expr -> . arith_expr OP_INC arith_expr
    (55) arith_expr -> . arith_expr OP_DEC arith_expr
    (56) arith_expr -> . term
    (61) logic_expr -> . TRUE
    (62) logic_expr -> . FALSE
    (63) logic_expr -> . OP_NOT LPAREN logic_expr RPAREN
    (64) logic_expr -> . OP_GT LPAREN expr COMMA expr RPAREN
    (65) logic_expr -> . OP_LT LPAREN expr COMMA expr RPAREN
    (66) logic_expr -> . OP_EQ LPAREN expr COMMA expr RPAREN
    (67) logic_expr -> . logic_expr OP_OR logic_expr
    (38) robot_op -> . OP_STEP IDENTIFIER
    (39) robot_op -> . OP_BACK
    (40) robot_op -> . OP_RIGHT
    (41) robot_op -> . OP_LEFT
    (42) robot_op -> . OP_LOOK
    (37) proc_call -> . IDENTIFIER param_list_opt
    (57) term -> . INT_LITERAL
    (58) term -> . IDENTIFIER
    (59) term -> . proc_call
    (60) term -> . OP_LOOK

    TRUE            shift and go to state 67
    FALSE           shift and go to state 68
    OP_NOT          shift and go to state 69
    OP_GT           shift and go to state 70
    OP_LT           shift and go to state 71
    OP_EQ           shift and go to state 72
    OP_STEP         shift and go to state 28
    OP_BACK         shift and go to state 29
    OP_RIGHT        shift and go to state 30
    OP_LEFT         shift and go to state 31
    OP_LOOK         shift and go to state 74
    IDENTIFIER      shift and go to state 73
    INT_LITERAL     shift and go to state 75

    expr                           shift and go to state 77
    arith_expr                     shift and go to state 62
    logic_expr                     shift and go to state 63
    robot_op                       shift and go to state 64
    proc_call                      shift and go to state 65
    term                           shift and go to state 66

state 27
